# trading-server

./: .gitignore  Cargo.toml  README.md
.arxiv/py/: Pipfile  mypy.ini  setup.cfg
.arxiv/py/src/: matching_engine.py  order_book.py  run.py  trading_client.py  transaction_ledger.py
.arxiv/py/tests/: test_order_book.py  test_transaction_ledger.py
.misc/: notes.txt  trading_mechanics.md
client-cli/: Cargo.toml
client-cli/src/: app.rs  codec.rs  fix.rs  main.rs
client-scripts/: Pipfile  gaussian_bot.py  init.py  random_walk_bot.py
client-web/: .eslintrc.json  index.html  package.json
client-web/src/: App.tsx  index.css  main.tsx
client-web/src/components/: Book.tsx  Depth.tsx  Order.tsx  Positions.tsx  Price.tsx  Trades.tsx
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/core/: btree.rs  engine.rs  mod.rs  order_book.rs  vector.rs
server/src/net/: api.rs  codec.rs  fix.rs  main.rs  mod.rs
server/tests/: engine.rs
