[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
axum = "*"
serde_json = "*"
tower-http = { version = "*", features = ["cors"] }
futures = "*"
time = "^0.2.23"
array-init = "*"
